# OpenAdmin

./: .gitignore  LICENSE  README.md
server/: alembic.ini  pyproject.toml
server/.env/: .env  .env.example
server/alembic/: env.py
server/alembic/versions/: 1aec0e50e916_add_sys_login_log_sys_operator_log_table.py  4de58a447cee_sys_user表手机号和邮箱添加唯一约束.py  623f5b01fadb_add_sys_login_log_sys_operator_log_table.py  83d3611b9008_init_table.py  87d6ca337ad1_add_sys_login_log_table.py  a015c7b78102_init_database.py  c9de948371ed_add_sys_login_log_sys_operator_log_table.py  cb4aef49a898_add_sys_oper_log_table.py  d0e02c7b2af5_sys_user_表增加是否超级管理员字段_is_superuser.py  d3d1e9dea12f_add_sys_login_log_table.py  d6deb8b1e85e_add_sys_oper_log_table.py  d6eac606fec3_init_users_table.py  eafae89e20e3_初始化表结构.py
server/app/: main.py
server/app/config/: __init__.py  app.py  auth.py  base.py  database.py  log.py  redis.py
server/app/core/: __init__.py  context.py  database.py  lifespan.py  logger.py  redis.py  response.py  security.py
server/app/crud/: __init__.py  base.py  login_log.py  menu.py  oper_log.py  permission.py  post.py  role.py  user.py
server/app/models/: __init__.py  base.py  dept.py  login_log.py  menu.py  oper_log.py  operate_log.py  permission.py  post.py  post_role.py  role.py  role_permission.py  user.py  user_post.py  user_role.py
server/app/schemas/: __init__.py  auth.py  login_log.py  menu.py  oper_log.py  role.py  user.py
server/app/services/: __init__.py  base.py  captcha.py  login_log.py  menu.py  oper_log.py  permission.py  post.py  role.py  user.py
(+61 files in other folders)
